# chatgpt-obsidian-sync

./: .gitignore  CHANGELOG.md  README.en.md  README.md  config.json  pyproject.toml
browser-extension/: background.js  content.js  conversation-list-parser.js  conversation-url.js  manifest.json  popup.html  popup.js
docs/: DEVELOPMENT.md  DISCLAIMER.md  INSTALL.zh-CN.md  KNOWN_LIMITS.md  PRIVACY.md  RELEASE_CHECKLIST.md  SAFETY.md  SPONSORS.zh-CN.md
docs/superpowers/plans/: 2026-06-12-chatgpt-obsidian-sync.md
docs/superpowers/specs/: 2026-06-12-chatgpt-obsidian-sync-design.md
src/chatgpt_obsidian_sync/: __init__.py  __main__.py  app.py  config.py  exporter.py  import_json.py  importer.py  schemas.py  store.py
tests/: conftest.py  test_api.py  test_assets_api.py  test_config.py  test_data_safety.py  test_exporter.py  test_extension_conversation_list_parser.py  test_extension_conversation_url.py  test_extension_realtime.py  test_extension_safety.py  test_import_json_cli.py  test_importer.py  test_settings_api.py  test_store.py  test_userscript_assets.py
userscript/: chatgpt-obsidian-sync.user.js
